Add: DTOs and Method definitions.
