# src/main/kotlin/com/tdl/urlshort/controller/ShortenerController.kt
@@ -1,29 +1,36 @@
 package com.tdl.urlshort.controller
 
+import com.tdl.urlshort.database.model.URL
+import com.tdl.urlshort.dtos.ApiResponse
+import com.tdl.urlshort.dtos.LongURL
+import com.tdl.urlshort.dtos.ShortURL
+import com.tdl.urlshort.dtos.URLMetrics
 import com.tdl.urlshort.service.ShorteningService
 import io.micronaut.http.HttpResponse
+import io.micronaut.http.annotation.Body
 import io.micronaut.http.annotation.Controller
 import io.micronaut.http.annotation.Get
 import io.micronaut.http.annotation.Post
 import io.micronaut.scheduling.TaskExecutors
 import io.micronaut.scheduling.annotation.ExecuteOn
 import io.swagger.v3.oas.annotations.tags.Tag
+import javax.validation.Valid
 
 @Controller("/uba/tdl")
 @ExecuteOn(TaskExecutors.IO)
-class ShortenerController(private val shorteningService : ShorteningService) {
+open class ShortenerController(private val shorteningService : ShorteningService) {
 
     @Get("/redirect")
     @Tag(name = "URL Operations")
-    fun redirectURL() : HttpResponse<Long> = HttpResponse.ok(shorteningService.redirectURL())
+    open fun redirectURL(@Valid @Body url : ShortURL) : HttpResponse<ApiResponse> = HttpResponse.ok(shorteningService.redirectURL(url))
 
     @Post("/shorten")
     @Tag(name = "URL Operations")
-    fun shortenURL() : HttpResponse<Long> = HttpResponse.created(shorteningService.shortenURL())
+    open fun shortenURL(@Valid @Body url : LongURL) : HttpResponse<URL> = HttpResponse.created(shorteningService.shortenURL(url))
 
     @Get("/metrics")
     @Tag(name = "URL Operations")
-    fun getMetrics() : HttpResponse<Long> = HttpResponse.ok(shorteningService.getUsageMetrics())
+    open fun getMetrics(@Valid @Body url : ShortURL) : HttpResponse<URLMetrics> = HttpResponse.ok(shorteningService.getUsageMetrics(url))
 
 
 }
