# src/main/kotlin/com/tdl/urlshort/dtos/ApiResponse.kt
@@ -1,0 +1,3 @@
+package com.tdl.urlshort.dtos
+
+data class ApiResponse(val message : String)
